--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroku-cli/plugin-run": "^8.1.4",
     "@heroku/heroku-cli-util": "^8.0.15",
     "@prisma/client": "^6.3.1",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.0",
@@ -25,6 +26,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^5.3.0",
+    "form-data": "^4.0.0",
     "googleapis": "^146.0.0",
     "helmet": "^4.6.0",
     "heroku": "^10.0.2",
@@ -32,10 +34,9 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
+    "multer": "^1.4.5-lts.1",
     "ngrok": "^5.0.0-beta.2",
     "node-cache": "^5.1.2",
-    "nodemailer": "^6.10.0",
-    "passport-oauth2": "^1.8.0",
     "pg": "^8.13.1",
     "rate-limiter": "^0.2.0",
     "semver": "^7.6.3",
